; ModuleID = '/home/carl/AnghaBench/tig/src/extr_view.c_add_line_text_at.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_view.c_add_line_text_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line = type { i32 }
%struct.view = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.line* @add_line_text_at(%struct.view* %0, i64 %1, i8* %2, i32 %3, i64 %4) #0 {
  %6 = alloca %struct.view*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.view* %0, %struct.view** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %11 = load %struct.view*, %struct.view** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @strlen(i8* %14)
  %16 = load i32, i32* %9, align 4
  %17 = load i64, i64* %10, align 8
  %18 = call %struct.line* @add_line_text_at_(%struct.view* %11, i64 %12, i8* %13, i32 %15, i32 %16, i64 %17, i32 0)
  ret %struct.line* %18
}

declare dso_local %struct.line* @add_line_text_at_(%struct.view*, i64, i8*, i32, i32, i64, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
